:lipstick: Fix size if spot name popup is too long

--- a/public/styles/map/map.styl
+++ b/public/styles/map/map.styl
@@ -196,6 +196,7 @@
 				box-shadow: none
 
 			&-name
+				max-width: 275px;
 				font-family: $ff-roboto-black
 				font-size: $fs-larger
 				color: $white
